--- a/spending-tracker.html
+++ b/spending-tracker.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-translate="spendingTracker">Spending Tracker</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="icon" href="data:,">
     <style>
         :root {
             --background-color: #f8f9fa;
@@ -562,11 +563,11 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/xlsx@0.20.3/dist/xlsx.full.min.js" integrity="sha512-CZHiMc1FvSOk+UzOmO9JTaUFuS9cTkwFgJHXsS9oD+sdvWr2y5c0mYIpM2pC2kzcm5kG5nE3e7l/5u1mU7Hg==" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.4/dist/chart.umd.min.js" integrity="sha512-JGPG4N2xX2UZ4ZOHk0UMg3iAanyHPSr3GedHkxQ5CLgCZSGDJgM4rNCD04A2geTb9oO2dXdkkmdmQ7B2u7SQ==" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js" integrity="sha512-qZvrmS2ekKPF2mSznTQsxqPgnpkI4DNTlrdUmTzrDgektczlKFDJsyFJhDoHkzR8yHB1nXrg4wxshP2X2Xmw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.3/jspdf.plugin.autotable.min.js" integrity="sha512-7z3otVycJ7YGLYcANMcW7vRjU+9pGMDdKMTkArhDEv5oM2zGwxLv/MgYAuOgl+UrBFlfYcDTd2kF+8q9W2TA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.1.6/purify.min.js" integrity="sha512-HFJn5geYplTQqR1TF7s1s0pL2Z5yH5nP2fQJGyku8tZ8qT5i0hTAgQb3gq9G5oNKn2kXh/4YOC36//wJqQ6Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="lib/xlsx.full.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.4/dist/chart.umd.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.3/jspdf.plugin.autotable.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="lib/purify.min.js"></script>
     <script src="utility.js"></script>
     <script>
         // State Management
