--- a/index.html
+++ b/index.html
@@ -1,11 +1,50 @@
-<!DOCTYPE html>
+<script type="text/javascript">
+        var gk_isXlsx = false;
+        var gk_xlsxFileLookup = {};
+        var gk_fileData = {};
+        function filledCell(cell) {
+          return cell !== '' && cell != null;
+        }
+        function loadFileData(filename) {
+        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
+            try {
+                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
+                var firstSheetName = workbook.SheetNames[0];
+                var worksheet = workbook.Sheets[firstSheetName];
+
+                // Convert sheet to JSON to filter blank rows
+                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
+                // Filter out blank rows (rows where all cells are empty, null, or undefined)
+                var filteredData = jsonData.filter(row => row.some(filledCell));
+
+                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
+                var headerRowIndex = filteredData.findIndex((row, index) =>
+                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
+                );
+                // Fallback
+                if (headerRowIndex === -1 || headerRowIndex > 25) {
+                  headerRowIndex = 0;
+                }
+
+                // Convert filtered JSON back to CSV
+                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
+                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
+                return csv;
+            } catch (e) {
+                console.error(e);
+                return "";
+            }
+        }
+        return gk_fileData[filename] || "";
+        }
+        </script><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo List and Spending Tracker</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+    <title>Home - Task & Expense Manager</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="icon" href="data:,">
     <style>
         :root {
             --background-color: #f8f9fa;
@@ -15,7 +54,6 @@
             --button-bg: #0d6efd;
             --button-text: #ffffff;
             --button-hover-bg: #0056b3;
-            --button-active-bg: #004085;
         }
         [data-theme="dark"] {
             --background-color: #212529;
@@ -25,207 +63,77 @@
             --button-bg: #0d6efd;
             --button-text: #ffffff;
             --button-hover-bg: #1a73e8;
-            --button-active-bg: #1557b0;
         }
         body {
             background-color: var(--background-color);
             color: var(--text-color);
             transition: all 0.3s ease;
-            font-family: 'Arial', sans-serif;
         }
-        .container {
-            background-color: var(--card-bg);
-            border: 1px solid var(--border-color);
-            border-radius: 15px;
-            padding: 20px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        }
-        .nav-tabs {
-            border-bottom: 2px solid var(--border-color);
-        }
-        .nav-link {
-            color: var(--text-color);
-            border-radius: 10px 10px 0 0;
-            transition: background-color 0.3s ease;
-        }
-        .nav-link.active {
+        .container, .card {
             background-color: var(--card-bg);
             color: var(--text-color);
             border-color: var(--border-color);
-            border-bottom: none;
-        }
-        .nav-link:hover {
-            background-color: var(--border-color);
         }
         .btn-primary {
             background-color: var(--button-bg);
             color: var(--button-text);
-            border-radius: 25px;
-            padding: 8px 20px;
-            transition: background-color 0.3s ease, transform 0.1s ease;
+            transition: background-color 0.3s ease;
         }
         .btn-primary:hover {
             background-color: var(--button-hover-bg);
+        }
+        .module-card {
+            transition: transform 0.2s;
+        }
+        .module-card:hover {
             transform: scale(1.05);
-        }
-        .btn-primary:active {
-            background-color: var(--button-active-bg);
-            transform: scale(0.95);
-        }
-        iframe {
-            width: 100%;
-            height: 600px;
-            border: none;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        .language-toggle {
-            width: auto;
-            border-radius: 10px;
-        }
-        footer {
-            margin-top: 20px;
-            text-align: center;
-            font-size: 0.9rem;
-            color: var(--text-color);
-            opacity: 0.8;
         }
     </style>
 </head>
-<body class="py-5">
-    <div class="container">
-        <h1 class="text-center mb-4">Todo List and Spending Tracker</h1>
-        <div class="d-flex justify-content-between align-items-center mb-4 flex-wrap">
-            <button class="btn btn-primary mb-2" id="toggleThemeBtn" data-translate="toggleDarkMode">Toggle Dark Mode</button>
-            <select id="languageToggle" class="form-select language-toggle mb-2">
-                <option value="en" data-translate="english">English</option>
-                <option value="ne" data-translate="nepali">Nepali</option>
-            </select>
+<body>
+    <div class="container mt-5">
+        <h1 class="text-center mb-4">Task & Expense Manager</h1>
+        <div class="mb-4 d-flex justify-content-end">
+            <button class="btn btn-primary" id="themeToggleBtn">Toggle Theme</button>
         </div>
-        <ul class="nav nav-tabs" id="appTabs" role="tablist">
-            <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="todo-tab" data-bs-toggle="tab" data-bs-target="#todo" type="button" role="tab" aria-controls="todo" aria-selected="true" data-translate="todoList">Todo List</button>
-            </li>
-            <li class="nav-item" role="presentation">
-                <button class="nav-link" id="spending-tab" data-bs-toggle="tab" data-bs-target="#spending" type="button" role="tab" aria-controls="spending" aria-selected="false" data-translate="spendingTracker">Spending Tracker</button>
-            </li>
-        </ul>
-        <div class="tab-content" id="appTabContent">
-            <div class="tab-pane fade show active" id="todo" role="tabpanel" aria-labelledby="todo-tab">
-                <iframe src="todo-list.html" id="todoIframe" title="Todo List"></iframe>
+        <div class="row">
+            <div class="col-md-4 mb-4">
+                <div class="card module-card">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">To-Do List</h5>
+                        <p class="card-text">Manage your tasks with categories, priorities, and due dates.</p>
+                        <a href="todo-list.html" class="btn btn-primary">Go to To-Do List</a>
+                    </div>
+                </div>
             </div>
-            <div class="tab-pane fade" id="spending" role="tabpanel" aria-labelledby="spending-tab">
-                <iframe src="spending-tracker.html" id="spendingIframe" title="Spending Tracker"></iframe>
+            <div class="col-md-4 mb-4">
+                <div class="card module-card">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Spending Tracker</h5>
+                        <p class="card-text">Track your income, expenses, and budgets with summaries.</p>
+                        <a href="spending-tracker.html" class="btn btn-primary">Go to Spending Tracker</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card module-card">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Shopping List</h5>
+                        <p class="card-text">Organize your shopping items and track purchases.</p>
+                        <a href="shopping-list.html" class="btn btn-primary">Go to Shopping List</a>
+                    </div>
+                </div>
             </div>
         </div>
-        <footer>
-            Software concept and designed by Santosh Phuyal
-        </footer>
     </div>
 
-    <!-- Commented out XLSX script as it appears unused -->
-    <!--
-    <script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-            return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-            if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-                try {
-                    var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                    var firstSheetName = workbook.SheetNames[0];
-                    var worksheet = workbook.Sheets[firstSheetName];
-                    var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                    var filteredData = jsonData.filter(row => row.some(filledCell));
-                    var headerRowIndex = filteredData.findIndex((row, index) =>
-                        row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                    );
-                    if (headerRowIndex === -1 || headerRowIndex > 25) {
-                        headerRowIndex = 0;
-                    }
-                    var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex));
-                    csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                    return csv;
-                } catch (e) {
-                    console.error(e);
-                    return "";
-                }
-            }
-            return gk_fileData[filename] || "";
-        }
-    </script>
-    -->
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="utils.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="utility.js"></script>
     <script>
-        (function () {
-            const todoIframe = document.getElementById('todoIframe');
-            const spendingIframe = document.getElementById('spendingIframe');
-            const toggleThemeBtn = document.getElementById('toggleThemeBtn');
-            const languageToggle = document.getElementById('languageToggle');
-
-            function initializeApp() {
-                // Load saved theme using applyTheme from utils.js
-                applyTheme();
-                applyTranslations();
-
-                // Load saved language
-                const savedLanguage = localStorage.getItem('selectedLanguage') || 'en';
-                languageToggle.value = savedLanguage;
-
-                // Wait for iframes to load before sending messages
-                todoIframe.onload = () => {
-                    propagateTheme(document.documentElement.getAttribute('data-theme'));
-                    propagateLanguage(savedLanguage);
-                };
-                spendingIframe.onload = () => {
-                    propagateTheme(document.documentElement.getAttribute('data-theme'));
-                    propagateLanguage(savedLanguage);
-                };
-            }
-
-            function propagateTheme(theme) {
-                if (todoIframe.contentWindow) {
-                    todoIframe.contentWindow.postMessage({ theme: theme }, '*');
-                }
-                if (spendingIframe.contentWindow) {
-                    spendingIframe.contentWindow.postMessage({ theme: theme }, '*');
-                }
-            }
-
-            function propagateLanguage(lang) {
-                if (todoIframe.contentWindow) {
-                    todoIframe.contentWindow.postMessage({ language: lang }, '*');
-                }
-                if (spendingIframe.contentWindow) {
-                    spendingIframe.contentWindow.postMessage({ language: lang }, '*');
-                }
-            }
-
-            toggleThemeBtn.addEventListener('click', () => {
-                toggleTheme();
-                applyTranslations(); // Updates the toggle button text
-                propagateTheme(document.documentElement.getAttribute('data-theme'));
-            });
-
-            languageToggle.addEventListener('change', () => {
-                const lang = languageToggle.value;
-                localStorage.setItem('selectedLanguage', lang);
-                applyTranslations();
-                propagateLanguage(lang);
-            });
-
-            // Ensure DOM is fully loaded
-            if (document.readyState === 'loading') {
-                document.addEventListener('DOMContentLoaded', initializeApp);
-            } else {
-                initializeApp();
-            }
-        })();
+        document.addEventListener("DOMContentLoaded", () => {
+            applyTheme();
+            document.getElementById("themeToggleBtn").addEventListener("click", toggleTheme);
+        });
     </script>
 </body>
 </html>
