--- a/spending-tracker.html
+++ b/spending-tracker.html
@@ -67,6 +67,9 @@
             --button-success-hover-bg: #218838;
             --button-info-bg: #17a2b8;
             --button-info-hover-bg: #138496;
+            --navbar-bg: #ffffff;
+            --navbar-text: #212529;
+            --navbar-hover-bg: #e9ecef;
         }
         [data-theme="dark"] {
             --background-color: #212529;
@@ -89,6 +92,9 @@
             --button-success-hover-bg: #2ecc71;
             --button-info-bg: #17a2b8;
             --button-info-hover-bg: #1ccad8;
+            --navbar-bg: #343a40;
+            --navbar-text: #f8f9fa;
+            --navbar-hover-bg: #495057;
         }
         body {
             background-color: var(--background-color);
@@ -163,27 +169,64 @@
         .action-buttons .btn {
             margin: 5px;
         }
+        .navbar {
+            background-color: var(--navbar-bg);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        .navbar-brand, .nav-link, .dropdown-item {
+            color: var(--navbar-text) !important;
+        }
+        .dropdown-item:hover {
+            background-color: var(--navbar-hover-bg);
+        }
+        .dropdown-item.active {
+            background-color: var(--button-bg);
+            color: var(--button-text) !important;
+        }
     </style>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">Task & Expense Manager</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Navigate
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="index.html">Home</a></li>
+                            <li><a class="dropdown-item" href="todo-list.html">To-Do List</a></li>
+                            <li><a class="dropdown-item active" href="spending-tracker.html">Spending Tracker</a></li>
+                            <li><a class="dropdown-item" href="shopping-list.html">Shopping List</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <select id="currencyToggle" class="form-select d-inline-block me-2" style="width: auto;">
+                            <option value="NRs">NRs</option>
+                            <option value="USD">USD</option>
+                            <option value="GBP">GBP</option>
+                        </select>
+                    </li>
+                    <li class="nav-item">
+                        <button class="btn btn-primary" id="themeToggleBtn">Toggle Theme</button>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <div class="container mt-5">
         <h1 class="mb-4">Spending Tracker</h1>
         <div class="action-buttons">
-            <div class="mb-3 d-flex justify-content-between align-items-center">
-                <div>
-                    <a href="index.html" class="btn btn-primary me-2">Home</a>
-                    <button class="btn btn-primary" id="spendingTrackerBtn">Add Spending Entry</button>
-                </div>
-                <div>
-                    <select id="currencyToggle" class="form-select d-inline-block me-2" style="width: auto;">
-                        <option value="NRs">NRs</option>
-                        <option value="USD">USD</option>
-                        <option value="GBP">GBP</option>
-                    </select>
-                    <button class="btn btn-secondary me-2" id="themeToggleBtn">Toggle Theme</button>
-                </div>
-            </div>
             <div class="d-flex flex-wrap">
+                <button class="btn btn-primary" id="spendingTrackerBtn">Add Spending Entry</button>
                 <button class="btn btn-success" id="addIncomeBtn">Add Income</button>
                 <button class="btn btn-danger" id="addExpenseBtn">Add Expense</button>
                 <button class="btn btn-info" id="summaryReportBtn">Summary Report</button>
