--- a/todo-list.html
+++ b/todo-list.html
@@ -65,6 +65,9 @@
             --button-success-hover-bg: #218838;
             --button-info-bg: #17a2b8;
             --button-info-hover-bg: #138496;
+            --navbar-bg: #ffffff;
+            --navbar-text: #212529;
+            --navbar-hover-bg: #e9ecef;
         }
         [data-theme="dark"] {
             --background-color: #212529;
@@ -85,6 +88,9 @@
             --button-success-hover-bg: #2ecc71;
             --button-info-bg: #17a2b8;
             --button-info-hover-bg: #1ccad8;
+            --navbar-bg: #343a40;
+            --navbar-text: #f8f9fa;
+            --navbar-hover-bg: #495057;
         }
         body {
             background-color: var(--background-color);
@@ -140,22 +146,53 @@
         .action-buttons .btn {
             margin: 5px;
         }
+        .navbar {
+            background-color: var(--navbar-bg);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        .navbar-brand, .nav-link, .dropdown-item {
+            color: var(--navbar-text) !important;
+        }
+        .dropdown-item:hover {
+            background-color: var(--navbar-hover-bg);
+        }
+        .dropdown-item.active {
+            background-color: var(--button-bg);
+            color: var(--button-text) !important;
+        }
     </style>
 </head>
 <body class="container py-5">
-    <h2 class="text-center mb-4">Todo List</h2>
-
-    <!-- Action Buttons -->
-    <div class="action-buttons">
-        <div class="mb-3 d-flex justify-content-between align-items-center">
-            <div>
-                <a href="index.html" class="btn btn-primary">Home</a>
-            </div>
-            <div>
-                <button class="btn btn-secondary me-2" id="themeToggleBtn">Toggle Theme</button>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">Task & Expense Manager</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Navigate
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="index.html">Home</a></li>
+                            <li><a class="dropdown-item active" href="todo-list.html">To-Do List</a></li>
+                            <li><a class="dropdown-item" href="spending-tracker.html">Spending Tracker</a></li>
+                            <li><a class="dropdown-item" href="shopping-list.html">Shopping List</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <button class="btn btn-primary" id="themeToggleBtn">Toggle Theme</button>
+                    </li>
+                </ul>
             </div>
         </div>
-    </div>
+    </nav>
+
+    <h2 class="text-center mb-4">Todo List</h2>
 
     <!-- Category Filter Dropdown -->
     <div class="mb-3">
@@ -315,24 +352,6 @@
             clearTimeout(timeoutId);
             timeoutId = setTimeout(() => func.apply(this, args), delay);
         };
-    }
-
-    // Check localStorage capacity
-    function checkStorageCapacity() {
-        const testKey = '__test__';
-        let data = '';
-        try {
-            for (let x = 0; x < 1024 * 1024; x++) {
-                data += 'a';
-            }
-            localStorage.setItem(testKey, data);
-            localStorage.removeItem(testKey);
-            return true;
-        } catch (e) {
-            console.error('Storage capacity exceeded:', e);
-            alert("Storage capacity exceeded. Please clear some data.");
-            return false;
-        }
     }
 
     // Initialize
